--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
 		<h1>Crispy BBQ Buttermilk Oven Fried Chicken</h1>
 		<h2> A variation of Crispy Sriracha Buttermilk Oven Fried Chicken by Tyson Hicks</h2>
+		<img src="3548106.jpg" alt="Fried Chicken">
 
 		<h3><strong>Ingredients</strong><br><em>for 4 servings</em></br></h3>
 		
