--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 	<div class="container">
 
 		<h1>Crispy BBQ Buttermilk Oven Fried Chicken</h1>
-		<h2> A variation of Crispy Sriracha Buttermilk Oven Fried Chicken by Tyson Hicks</h2>
-		<img src="img/3548106.jpg" alt="Fried Chicken" height="50" weight="50">
+		<h2> By Tyson Hicks</h2>
+		<img src="img/3548106.jpg" alt="Fried Chicken" style="padding:1px;border:thin solid crimson;">
 
 		<h3><strong>Ingredients</strong><br><em>for 4 servings</em></br></h3>
 		
