--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
 
 		<h1>Crispy BBQ Buttermilk Oven Fried Chicken</h1>
 		<h2> By Tyson Hicks</h2>
-		<img src="img/3548106.jpg" alt="Fried Chicken" style="padding:1px;border:thin solid crimson;">
+		<img src="img/3548106.jpg" alt="Fried Chicken" style="padding:1px;border:thick solid crimson;">
 
+	<div class="Ingredients">
 		<h3><strong>Ingredients</strong><br><em>for 4 servings</em></br></h3>
 		
 		<ul>
@@ -42,6 +43,7 @@
 			<li>1/2 teaspoon of seasoning salt</li>
 			<li>3 tablespoons of cooking oil</li>
 		</ul>
+	</div>
 
 		<h3><stong>Preparation</strong></h3>
 
