--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
 
 </head>
+<style>
+
 <body>
 
 	<!-- Page content goes inside the container -->
@@ -28,7 +30,7 @@
 		<h2> By Tyson Hicks</h2>
 		<img src="img/3548106.jpg" alt="Fried Chicken" style="padding:1px;border:thick solid crimson;">
 
-	<div class="Ingredients">
+
 		<h3><strong>Ingredients</strong><br><em>for 4 servings</em></br></h3>
 		
 		<ul>
@@ -43,7 +45,6 @@
 			<li>1/2 teaspoon of seasoning salt</li>
 			<li>3 tablespoons of cooking oil</li>
 		</ul>
-	</div>
 
 		<h3><stong>Preparation</strong></h3>
 
@@ -62,4 +63,5 @@
 	</div><!-- end container -->
 	
 </body>
+
 </html>
