--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
 
 </head>
-<body>
+<body style="background: url(http://ereaderbackgrounds.com/patterns/n1e/checkerboard.jpg)">
+</body>
 
 	<!-- Page content goes inside the container -->
 	<!-- In general, you should have only one container per page. -->
