--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Title goes here</title>
@@ -29,7 +28,7 @@
 		<h2> By Tyson Hicks</h2>
 		<img src="img/3548106.jpg" alt="Fried Chicken" style="padding:1px;border:thick solid crimson;">
 
-
+<font color="#DC143C">
 		<h3><strong>Ingredients</strong><br><em>for 4 servings</em></br></h3>
 		
 		<ul>
