--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		<h2> By Tyson Hicks</h2>
 		<img src="img/3548106.jpg" alt="Fried Chicken" style="padding:1px;border:thick solid crimson;">
 
-<font color="#DC143C">
+<font color="#000000">
 		<h3><strong>Ingredients</strong><br><em>for 4 servings</em></br></h3>
 		
 		<ul>
