--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		
 		<ul>
 			<li>3 boneless, skinless, chicken breast</li>
-			<li>1 cupelow fat buttermilk</li>
+			<li>1 cup of low fat buttermilk</li>
 			<li>1/4 cup of BBQ sauce</li>
 			<li>1 cup of panko breadcrumbs</li>
 			<li>1 cup of all purpose flour</li>
