--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		<h3><strong>Ingredients</strong><br><em>for 4 servings</em></br></h3>
 		
 		<ul>
-			<li>3 boneless, skinless, chicken breast</li>
+			<li>3 boneless, skinless chicken breast</li>
 			<li>1 cup of low fat buttermilk</li>
 			<li>1/4 cup of BBQ sauce</li>
 			<li>1 cup of panko breadcrumbs</li>
