--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 		<ol>
 			<li>On a cutting board, slice each chickeen breast into strips.</li>
-			<li>In a resealable bag combine the buttermilk, BBQ sauce, and chicken. Shake back to mix the ingredients. Refrigerate for at least 2 hours.</li>
+			<li>In a resealable bag combine the buttermilk, BBQ sauce, and chicken. Shake bag to mix the ingredients. Refrigerate for at least 2 hours.</li>
 			<li>Preheat oven for 425°F</li>
 			<li>In a dish, add the panko, flour, salt, pepper, paprika, and seasoning salt and mix to combine.</li>
 			<li>Dip the chicken strips into the panko mixture until fully coated.</li>
